--- a/_config.yml
+++ b/_config.yml
@@ -16,12 +16,12 @@ minimal_mistakes_skin    : "dark" # "air", "aqua", "contrast", "dark", "dirt", "
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Front-end developer website"
+title                    : "wandudev"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Wandu"
-description              : "Front-end developer website"
-url                      : "https://greenpeas.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+description              : "wandudev"
+url                      : "https://wandudev.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
@@ -93,9 +93,9 @@ analytics:
 
 # Site Author
 author:
-  name             : "Lee Seungyeon"
+  name             : "Wandu"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "Front-end **Developer**"
+  bio              : " **Developer**"
   location         : "Seoul, Korea"
   email            :
   links:
